# test-gmp-mac-cross-compilation

./: CMakeLists.txt  hello_pure_gmp.cpp
.github/workflows/: build.yml
